--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
       - assets/images/
       - assets/icons/bottomBarIcons/
       - assets/icons/profileIcons/
+      - assets/icons/roomInfoIcons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
